whd-1486 java 11 images
Signed-off-by: c3cvpfj7@ca.ibm.com <c3cvpfj7@ca.ibm.com>